--- a/backend/package.json
+++ b/backend/package.json
@@ -1,16 +1,11 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "main": "src/index.js",
   "scripts": {
     "dev": "nodemon src/index.js",
     "start": "node src/index.js"
   },
-
-
-
-
   "keywords": [],
   "author": "",
   "type": "module",
@@ -29,5 +24,6 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
-  }
+  },
+  "description": ""
 }
